add switch and transformer validation to post-creation validated elements
Signed-off-by: CHIQUET Benoit <benoit.chiquet@rte-france.com>